Added Example of StreamAPI.